# langextract-demo

./: .env.example  .gitignore  README.md  app.py  install.sh  pyproject.toml  requirements.txt  run.sh  start.sh  upgrade.sh
