[project]
name = "langextract-demo"
version = "0.1.0"
description = "Streamlit demo for PDF extraction with langextract"
requires-python = ">=3.10"
dependencies = [
  "langextract>=1.0.3",
  "pdfplumber>=0.11.0",
  "streamlit>=1.40.0",
]

[build-system]
requires = ["hatchling>=1.24.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
only-include = ["app.py"]

[tool.hatch.build.targets.sdist]
include = ["app.py", "README.md", "pyproject.toml"]
